# cell_sim

./: .gitignore  CMakeLists.txt  README.md  main.py  main1.py  notes.md  primi_2000.csv  pyrightconfig.json  reminder.txt  test.py
CellSimLib/: README.md
CellSimLib/app/: CMakeLists.txt  main.cpp
CellSimLib/include/CellLib/: cell.h  controller.h  grid.h
CellSimLib/include/cellular_lib/: controller.h  controller_3d.h  grid.h
CellSimLib/src/: cell.cpp  controller.cpp  grid.cpp
CellSimLib/src/old_versions/: cell copy.cpp  grid copy.cpp
cell_notes/: cell.ipynb  controller.ipynb  scalar.ipynb
codes/cpp/: CMakeLists.txt
codes/cpp/graph_codes/: graph.py  graph_1.py
codes/cpp/my_env/: pyvenv.cfg
codes/cpp/notes/: info_model.md  spiegazioni.md
codes/cpp/src/: cell.cpp  controller.cpp  controller.h  controller_3d.cpp  controller_3d.h  grid.cpp  grid.h  grid_3d.cpp  grid_3d.h  test.cpp  test_grid.cpp  test_grid_creation.cpp
codes/old/model/: grid3D.py
codes/old_versions/first_terapy/: main.py
codes/old_versions/first_terapy/model/: controller.py
codes/old_versions/v_dose1/: README.md  main.py
codes/python/: main.py
codes/python/model/: graphs.py
codes/python/model/cell_pack/: cell.py
cpp/: CMakeLists.txt  README.md
cpp/graph_code/: graph.py
cpp/graph_codes/: graph.py
cpp/my_env/: pyvenv.cfg
cpp/notes/: cells_behaviour.md  cmake_notes.md  grid.md  grid_contr.md  radiation.md  sim_cell.md  spiegazioni.md
cpp/results/data/tabs/: t0_gd.txt  (+100 more)
cpp/src/: README.md  cell.cpp  controller_3d.cpp  controller_3d.h  grid_3d.cpp  grid_3d.h  grid_test.py  main.cpp  test.cpp  test_growth.cpp
cpp/tested/: README.md  neigh_counts.cpp  sources.cpp
docs/: README.md  main.md  tested.md
model/: controller.py  controller1.py  controller2.py  controller3D.py  graphs.py  grid.py  grid2.py  grid3D.py  scalar.py
notebooks/: funzionamento.ipynb  grid.ipynb  scalar.ipynb
notebooks/general_notes/: note.txt
notes/: grid_contr.md  ideas.md  methods.md  notes.md  reminder.txt  sim_cell.md
notes/general_notes/: methods_ita.md  normal_distribution.md  sim_cell_ita.md  tested.md
python/: CMakeLists.txt  binding.cpp  control.py  main.py
python/graph_code/: graph.py
python/model/: controller.py
python/notebooks/: diffusion.ipynb  grid.ipynb
python/notebooks/text_notes/: note.txt  spiegazione1.md
rein/: CMakeLists.txt  __init__.py  agent.py  binding.cpp  callbacks.py  config.py  control.py  control_test.py  dqn_agent.py  dqn_model.py  evaluate.py  models.py  policies.py  replay_buffer.py  reward.py  rl_env.py  storage.py  train.py  utils.py  wrappers.py
rein/agent/: __init__.py  dqn_agent.py  plot_metrics.py  replay_buffer.py  save.py  train.py
rein/agent/core/: __init__.py  dqn_agent.py
rein/agent/metrics/: __init__.py  plot_metrics.py
rein/agent/train/: __init__.py  save_io.py  train.py  training_state.py
rein/configs/: __init__.py  defaults.py
rein/cpp_bridge/: binding.cpp
rein/env/: __init__.py  rl_env.py
rein/graph_code/: graph.py
rein/model/: __init__.py  dqn_model.py
rein/tests/: control.py  control_test.py
results/data/2d/: 1. cell_proliferation_0.txt  3. cell_proliferation_100.txt  4. cell_proliferation_149.txt  cell_proliferation_t0.txt  cell_proliferation_t100.txt  cell_proliferation_t149.txt  cell_proliferation_t50.txt
results/data/3d/: 3. cell_proliferation_100.txt  4. cell_proliferation_149.txt  cell_proliferation_t0.txt  cell_proliferation_t100.txt  cell_proliferation_t149.txt  cell_proliferation_t50.txt
results/data/cell_num/: cell_counts_gr.txt  cell_counts_tr.txt
results/data/general/: total_cells.txt  total_cells_therapy.txt
results/dqn_agent/: config.json  training_state.pt
results/dqn_agent/agent/: agent_final.pt  agent_final_metrics.csv  agent_paused.pt  dqn_agent_ep0001.pt  dqn_agent_ep0001_metrics.csv  dqn_agent_ep0002.pt  dqn_agent_ep0002_metrics.csv  dqn_agent_ep0003.pt  dqn_agent_ep0003_metrics.csv  dqn_agent_ep0004.pt  dqn_agent_ep0004_metrics.csv  dqn_agent_ep0005.pt  dqn_agent_ep0005_metrics.csv  dqn_agent_ep0006.pt  dqn_agent_ep0006_metrics.csv  dqn_agent_ep0007.pt  dqn_agent_ep0007_metrics.csv  dqn_agent_ep0008.pt  dqn_agent_ep0008_metrics.csv  dqn_agent_ep0009.pt  dqn_agent_ep0009_metrics.csv  dqn_agent_ep0010.pt  dqn_agent_ep0010_metrics.csv  dqn_agent_ep0011.pt  dqn_agent_ep0011_metrics.csv  dqn_agent_ep0012.pt  dqn_agent_ep0012_metrics.csv  dqn_agent_ep0013.pt  dqn_agent_ep0013_metrics.csv  dqn_agent_ep0014.pt  dqn_agent_ep0014_metrics.csv  dqn_agent_ep0015.pt  dqn_agent_ep0015_metrics.csv  dqn_agent_ep0016.pt  dqn_agent_ep0016_metrics.csv  dqn_agent_ep0017.pt  dqn_agent_ep0017_metrics.csv  dqn_agent_ep0018.pt  dqn_agent_ep0018_metrics.csv  dqn_agent_ep0019.pt  (+161 more)
results/dqn_agent/buffer/: replay_buffer_ep0001.pt  replay_buffer_ep0002.pt  replay_buffer_ep0003.pt  replay_buffer_ep0004.pt  replay_buffer_ep0005.pt  replay_buffer_ep0006.pt  replay_buffer_ep0007.pt  replay_buffer_ep0008.pt  replay_buffer_ep0009.pt  replay_buffer_ep0010.pt  replay_buffer_ep0011.pt  replay_buffer_ep0012.pt  replay_buffer_ep0013.pt  replay_buffer_ep0014.pt  replay_buffer_ep0015.pt  replay_buffer_ep0016.pt  replay_buffer_ep0017.pt  replay_buffer_ep0018.pt  replay_buffer_ep0019.pt  replay_buffer_ep0020.pt  replay_buffer_ep0021.pt  replay_buffer_ep0022.pt  replay_buffer_ep0023.pt  replay_buffer_ep0024.pt  replay_buffer_ep0025.pt  replay_buffer_ep0026.pt  replay_buffer_ep0027.pt  replay_buffer_ep0028.pt  replay_buffer_ep0029.pt  replay_buffer_ep0030.pt  replay_buffer_ep0031.pt  replay_buffer_ep0032.pt  replay_buffer_ep0033.pt  replay_buffer_ep0034.pt  replay_buffer_ep0035.pt  replay_buffer_ep0036.pt  replay_buffer_ep0037.pt  replay_buffer_ep0038.pt  replay_buffer_ep0039.pt  replay_buffer_ep0040.pt  (+61 more)
tested/: change_neigh_counts.cpp  growth.cpp  source_move.cpp
virtual_amb/: pyvenv.cfg
virtual_amb/Scripts/: activate  activate.bat
virtual_amb_ubuntu/: pyvenv.cfg
virtual_amb_win/: pyvenv.cfg
virtual_amb_win/Scripts/: activate  activate.bat
working/python/: issues.md
working/python/model/: graphs.py  grid.py
(+62 files in other folders)
